@@ -4,8 +4,9 @@ Revision history for Perl module Math::Prime::Util::GMP
 
     [ADDED]
 
-    - harmfrac                  returns (num,den) of Harmonic number
-    - is_proth_prime(p)         For k*2^n+1, returns -1, 0, or 2
+    - harmfrac                           returns (num,den) of Harmonic number
+    - is_proth_prime(p)                  For k*2^n+1, returns -1, 0, or 2
+    - is_frobenius_khashin_pseudoprime   returns 1 if Frob-Khashin prob prime
 
     [FIXES]
 
